# aiops

./: .gitignore  README.md  README_AI.md  config.yaml  config_loader.py  main.py  pyproject.toml  skills_store_cli.py
agent/: agent.py
agent/skills/: bash.py
core/: executor.py  security.py
llm/: adapters.py  base.py  engine.py  factory.py
skill/: bash.md  system.md
tools/: __init__.py  test_llm_chat.py  test_minimax_chat.py
utils/: feishu_bot.py  llm_client.py
